[gd_scene load_steps=2 format=3 uid="uid://c3jm5gaa8yh8o"]

[ext_resource type="Script" path="res://Scripts/HealthComponent.gd" id="1_1mi31"]

[node name="HealthComponent" type="Node2D"]
script = ExtResource("1_1mi31")

[node name="IFrameTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="StunTimer" type="Timer" parent="."]

[connection signal="timeout" from="IFrameTimer" to="." method="_on_i_frame_timer_timeout"]
